--- a/templates/about.html
+++ b/templates/about.html
@@ -10,12 +10,11 @@
     <div class="d-flex justify-content-start mb-4">
         <div class="p-3" style="width:700px">
             <h2>{{ post.title }}</h2>
-            <p class="text-muted mt-2">Created: {{ post.created_at }}</p>
+            <p class="text-muted mt-2">Created: {{ post.created_at|date:"d M Y H:i" }}</p>
             <hr class="border border-primary border-1 opacity-100">
             <p class="mt-2">{{post.content|truncatewords:500}}</p>
             <div class="d-flex justify-content-between">
                 <div>
-                    <a href="/post/?slug={{post.slug}}" class="btn btn-primary me-2 px-4">Read</a>
                     <a href="{% url 'edit' post.slug %}" class="btn btn-primary px-4 me-2">Edit</a>
                     <a href="{% url 'delete' post.slug %}" class="btn px-4 btn-danger">Delete</a>
                 </div>
