--- a/templates/post/create.html
+++ b/templates/post/create.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'post/base.html' %}
 
 {% block title %}
 Home
@@ -8,7 +8,7 @@ Home
 <div class="container" style="margin-top: 30px;">
     <h2 class="mb-4">Create a new post!</h2>
     <div class="row">
-        <div class="col-3">
+        <div class="col-sm-8 col-md-5">
             <form method="post">
                 {% csrf_token %}
                 {{form.as_p}}
