--- a/templates/post/edit.html
+++ b/templates/post/edit.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'post/base.html' %}
 
 {% block title %}
 edit {{post}}
@@ -12,7 +12,7 @@ edit {{post}}
             <form method="post">
                 {% csrf_token %}
                 {{form.as_p}}
-                <button type="submit" class="btn btn-primary">Edit!</button>
+                <button type="submit" class="btn btn-primary">Edit</button>
             </form>
         </div>
     </div>
