--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,6 +4,18 @@ Login
 {% endblock %}
 
 {% block content %}
+{% if form.non_field_errors %}
+{% for error in form.non_field_errors %}
+    <div class="container mt-3">
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <div class="d-flex align-items-center">
+                {{ error }}
+            </div>
+            <button type="button" class="btn-close" style="height:20px" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+{% endfor %}
+{% endif %}
 <form method="post">
     {% csrf_token %}
     <div class="container mt-5">
