--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,13 +1,13 @@
 {% extends 'post/base.html' %}
 {% block title %}
-Регистрация
+Registraion
 {% endblock %}
 
 {% block content %}
 <form method="post">
     {% csrf_token %}
     <div class="container mt-5">
-        <h2>Регистрация</h2>
+        <h2>Registration</h2>
         {% for field in form %}
         <div class="row">
             <div class="col-md-3 gy-2">
@@ -21,7 +21,7 @@
             </div>
         </div>
         {% endfor %}
-        <button type="submit" class="btn btn-primary my-3">Зарегистрироваться</button>
+        <button type="submit" class="btn btn-primary my-3">Register</button>
     </div>
 </form>
 {% endblock %}
