--- a/templates/post/base.html
+++ b/templates/post/base.html
@@ -28,11 +28,15 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/post/create">Create a post</a>
-                    </li>
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/?user_posts=true">Check your posts</a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <form class="d-flex me-3" method="get" action="/">
                     <input name="title" class="form-control me-2" type="search" placeholder="Type in the title"
-                        aria-label="Search" />
+                        aria-label="Search"/>
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
                 <ul class="navbar-nav">
@@ -75,10 +79,8 @@
     </nav>
     {% block content %}
     {% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script></script>
 </body>
-
 </html>
