--- a/templates/post/about.html
+++ b/templates/post/about.html
@@ -5,6 +5,11 @@
 {% endblock %}
 
 {% block content %}
+{% if messages %}
+{% for message in messages %}
+{% include 'post/messages.html' with message=message %}
+{% endfor %}
+{% endif %}
 <div class="container my-5">
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -33,12 +38,43 @@
                 <div>
                     <a href="{% url 'edit' post.slug %}" class="btn btn-primary px-4 me-2">Edit</a>
                     <a href="{% url 'delete' post.slug %}" class="btn px-4 btn-danger" data-bs-toggle="modal"
-                        data-bs-target="#exampleModal">Delete</a>
+                       data-bs-target="#exampleModal">Delete</a>
                 </div>
                 <div>
                     <a href="/" class="btn px-4 btn-warning">Go Back</a>
                 </div>
             </div>
+            <div class="d-flex mt-5 mb-4 align-items-center">
+                <h2>Comments:</h2>
+                <a class="btn btn-primary ms-3" href="{% url 'comment_add' post.slug %}"
+                   style="width-36px; height: 36px;">
+                    <i class="bi bi-plus-lg"></i>
+                </a>
+            </div>
+            {% for comment in post.comments.all %}
+            <div class="row">
+                <div class="col-md-5">
+                    <div class="d-flex justify-content-between align-items-center">
+                        <h4>{{ comment.author.username }}</h4>
+                        <form method="post" action="{% url 'comment_delete' comment.pk %}">
+                            {% csrf_token %}
+                            <button type="submit"
+                                    class="btn btn-sm btn-outline-danger ms-2"
+                                    style="width: 32px; height: 32px; display: inline-flex; align-items: center; justify-content: center;">
+                                <i class="bi bi-trash"></i>
+                            </button>
+                        </form>
+                    </div>
+                    {% if comment.updated_at > comment.created_at %}
+                    <p class="text-muted">Updated: {{ comment.updated_at|date:"d M Y H:i" }}</p>
+                    {% else %}
+                    <p class="text-muted">Created: {{ comment.created_at|date:"d M Y H:i" }}</p>
+                    {% endif %}
+                    <hr class="border border-info border-1 opacity-100">
+                    <p>{{ comment.content|truncatewords:50 }}</p>
+                </div>
+            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
