--- a/templates/post/about.html
+++ b/templates/post/about.html
@@ -1,5 +1,5 @@
 {% extends 'post/base.html' %}
-
+{% load my_tags %}
 {% block title %}
 {{ post.slug }}
 {% endblock %}
@@ -31,15 +31,28 @@
     <div class="d-flex justify-content-start mb-4">
         <div class="p-3 w-100">
             <h2>{{ post.title }}</h2>
-            <p class="text-muted mt-2">Created: {{ post.created_at|date:"d M Y H:i" }}</p>
+            {% if post.tags.all %}
+            <h5>Tags:
+                {% for tag in post.tags.all %}
+                <a href="/?tag={{tag}}"><span class="badge text-bg-success">{{tag}}</span></a>
+                {% endfor %}
+            </h5>
+            {% endif %}
+            {% if post.updated_at|date:"d M Y H:i" == post.created_at|date:"d M Y H:i" %}
+            <p class="text-muted">Created: {{ post.created_at|date:"d M Y H:i" }}</p>
+            {% else %}
+            <p class="text-muted">Updated: {{ post.updated_at|date:"d M Y H:i" }}</p>
+            {% endif %}
             <hr class="border border-primary border-1 opacity-100">
             <p class="mt-2">{{post.content|truncatewords:500}}</p>
             <div class="d-flex justify-content-between">
+                {% if post.author == request.user or request.user.is_superuser %}
                 <div>
                     <a href="{% url 'edit' post.slug %}" class="btn btn-primary px-4 me-2">Edit</a>
                     <a href="{% url 'delete' post.slug %}" class="btn px-4 btn-danger" data-bs-toggle="modal"
                        data-bs-target="#exampleModal">Delete</a>
                 </div>
+                {% endif %}
                 <div>
                     <a href="/" class="btn px-4 btn-warning">Go Back</a>
                 </div>
@@ -51,30 +64,7 @@
                     <i class="bi bi-plus-lg"></i>
                 </a>
             </div>
-            {% for comment in post.comments.all %}
-            <div class="row">
-                <div class="col-md-5">
-                    <div class="d-flex justify-content-between align-items-center">
-                        <h4>{{ comment.author.username }}</h4>
-                        <form method="post" action="{% url 'comment_delete' comment.pk %}">
-                            {% csrf_token %}
-                            <button type="submit"
-                                    class="btn btn-sm btn-outline-danger ms-2"
-                                    style="width: 32px; height: 32px; display: inline-flex; align-items: center; justify-content: center;">
-                                <i class="bi bi-trash"></i>
-                            </button>
-                        </form>
-                    </div>
-                    {% if comment.updated_at > comment.created_at %}
-                    <p class="text-muted">Updated: {{ comment.updated_at|date:"d M Y H:i" }}</p>
-                    {% else %}
-                    <p class="text-muted">Created: {{ comment.created_at|date:"d M Y H:i" }}</p>
-                    {% endif %}
-                    <hr class="border border-info border-1 opacity-100">
-                    <p>{{ comment.content|truncatewords:50 }}</p>
-                </div>
-            </div>
-            {% endfor %}
+            {% show_comments post.comments.all %}
         </div>
     </div>
 </div>
