--- a/templates/post/home.html
+++ b/templates/post/home.html
@@ -6,8 +6,17 @@ Home
 {% endblock %}
 
 {% block content %}
-<div class="container my-5">
+{% if not user.is_authenticated %}
+<div class="container mt-3">
+    <div class="alert alert-danger alert-dismissible fade show d-flex align-items-center" role="alert"
+         style="min-height: 60px;">
+        <i class="bi bi-exclamation-triangle me-2" style="font-size: 20px; flex-shrink: 0;"></i>
+        <div class="flex-grow-1">
+            Log in to get the full access to the site!
+        </div>
+    </div>
 </div>
+{% endif %}
 {% if messages %}
 {% for message in messages %}
 {% include 'post/messages.html' with message=message %}
@@ -18,10 +27,14 @@ Home
     {% include 'post/post_card.html' with post=post %}
     {% empty %}
     <h2>No posts yet :(</h2>
-    <p>To create a new post click <a href="/post/create">here</a></p>
+    {% if not user.is_authenticated %}
+    <p>To create a new post click <a href="{% url 'login' %}">here</a> to log in</p>
+    {% else %}
+    <p>To create a new post click <a href="{% url 'create' %}">here</a></p>
+    {% endif %}
     {% endfor %}
-    {% if posts.paginator.num_pages > 1 %}
-    {% include 'post/pagination.html' with page=posts%}
+    {% if page_obj.paginator.num_pages > 1 %}
+    {% include 'post/pagination.html' with page=page_obj%}
     {% endif %}
 </div>
 {% endblock %}
