--- a/templates/post/about.html
+++ b/templates/post/about.html
@@ -30,7 +30,11 @@
     </div>
     <div class="d-flex justify-content-start mb-4">
         <div class="p-3 w-100">
-            <h2>{{ post.title }}</h2>
+            <div class="d-flex justify-content-between">
+                <h2>{{ post.title }}</h2>
+                <button type="button" class="btn btn-info"><i class="bi bi-eye-fill"></i> {{post.views}}
+                </button>
+            </div>
             {% if post.tags.all %}
             <h5>Tags:
                 {% for tag in post.tags.all %}
