--- a/templates/post/base.html
+++ b/templates/post/base.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark mb-5">
         <div class="container">
             <span class="navbar-brand">Blog</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
