--- a/templates/post/create.html
+++ b/templates/post/create.html
@@ -9,7 +9,7 @@ Create a new post
     <h2 class="mb-4">Create a new post!</h2>
     <div class="row">
         <div class="col-sm-8 col-md-5">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 {{field.label_tag}}
