--- a/templates/post/edit.html
+++ b/templates/post/edit.html
@@ -9,7 +9,7 @@ edit {{post}}
     <h2 class="mb-4">Edit the post!</h2>
     <div class="row">
         <div class="col-5">
-            <form method="post">
+            <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                 {{field.label_tag}}
