--- a/templates/post/home.html
+++ b/templates/post/home.html
@@ -23,18 +23,27 @@ Home
 {% endfor %}
 {% endif %}
 <div class="container my-2 w-60">
-    {% for post in posts %}
-    {% include 'post/post_card.html' with post=post %}
-    {% empty %}
-    <h2>No posts yet :(</h2>
-    {% if not user.is_authenticated %}
-    <p>To create a new post click <a href="{% url 'login' %}">here</a> to log in</p>
-    {% else %}
-    <p>To create a new post click <a href="{% url 'create' %}">here</a></p>
-    {% endif %}
-    {% endfor %}
-    {% if page_obj.paginator.num_pages > 1 %}
-    {% include 'post/pagination.html' with page=page_obj%}
-    {% endif %}
+    <div class="row">
+        <div class="col-lg-8">
+            {% for post in posts %}
+            {% include 'post/post_card.html' with post=post %}
+            {% empty %}
+            <h2>No posts yet :(</h2>
+            {% if not user.is_authenticated %}
+            <p>To create a new post click <a href="{% url 'login' %}">here</a> to log in</p>
+            {% else %}
+            <p>To create a new post click <a href="{% url 'create' %}">here</a></p>
+            {% endif %}
+            {% endfor %}
+        </div>
+        <div class="col-lg-4">
+            <div class="d-flex flex-column align-items-lg-end align-items-center mt-3">
+                {% include 'post/side_info.html' %}
+            </div>
+        </div>
+        {% if page_obj.paginator.num_pages > 1 %}
+        {% include 'post/pagination.html' with page=page_obj%}
+        {% endif %}
+    </div>
 </div>
 {% endblock %}
