--- a/templates/post/base.html
+++ b/templates/post/base.html
@@ -44,7 +44,9 @@
                             <i class="bi bi-person-circle me-1"></i>{{ user.username }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-
+                            <li><a class="dropdown-item" href="{% url 'profile' %}">
+                                <i class="bi bi-person me-2"></i>Profile
+                            </a></li>
                             <li><a class="dropdown-item" href="{% url 'password_change' %}">
                                 <i class="bi bi-key me-2"></i>Change Password
                             </a></li>
