Added Caching, Sessions, ReCapcha, OAuth, Email verification, post sharing via email, custom error pages, footer.

--- a/templates/post/coment_edit.html
+++ b/templates/post/coment_edit.html
@@ -13,6 +13,7 @@ Edit the comment
                 {% csrf_token %}
                 {{form.as_p}}
                 <button type="submit" class="btn btn-primary">Edit!</button>
+                <button type="reset" class="btn btn-danger">Reset</button>
             </form>
         </div>
     </div>
