--- a/templates/registration/password_change.html
+++ b/templates/registration/password_change.html
@@ -5,13 +5,13 @@ Password reset
 {% endblock %}
 
 {% block content %}
-<form method="post">
-    {% csrf_token %}
-    <div class="container mt-5">
+<div class="container mt-5">
+    <form method="post">
+        {% csrf_token %}
         <h2>Password change</h2>
         {% for field in form %}
         <div class="row">
-            <div class="col-md-3 gy-2">
+            <div class="col-md-6 col-lg-4 gy-2">
                 {{field.label_tag}}
                 {{field}}
                 {% if field.errors %}
@@ -23,6 +23,7 @@ Password reset
         </div>
         {% endfor %}
         <button type="submit" class="btn btn-primary my-3">Change</button>
-    </div>
-</form>
+        <button type="reset" class="btn btn-danger">Reset</button>
+    </form>
+</div>
 {% endblock %}
