--- a/templates/post/about.html
+++ b/templates/post/about.html
@@ -31,7 +31,13 @@
     <div class="d-flex justify-content-start mb-4">
         <div class="p-3 w-100">
             <div class="d-flex justify-content-between">
-                <h2>{{ post.title }}</h2>
+                <div class="d-flex align-items-center">
+                    <h2>{{ post.title }}</h2>
+                    <a class="btn btn-sm btn-primary ms-2" href="{% url 'post_send' post.slug %}"
+                       style="width: 32px; height: 32px; display: inline-flex; align-items: center; justify-content: center;">
+                        <i class="bi bi-send"></i>
+                    </a>
+                </div>
                 <button type="button" class="btn btn-info"><i class="bi bi-eye-fill"></i> {{post.views}}
                 </button>
             </div>
@@ -68,7 +74,7 @@
                     <i class="bi bi-plus-lg"></i>
                 </a>
             </div>
-            {% show_comments post.comments.all %}
+            {% show_comments comments %}
         </div>
     </div>
 </div>
