--- a/templates/post/base.html
+++ b/templates/post/base.html
@@ -12,7 +12,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark mb-5">
         <div class="container">
             <span class="navbar-brand">Blog</span>
@@ -77,8 +77,17 @@
             </div>
         </div>
     </nav>
-    {% block content %}
-    {% endblock %}
+    <main class="flex-grow-1">
+        {% block content %}
+        {% endblock %}
+    </main>
+
+    <footer class="bg-dark py-5 mt-5">
+        <div class="container text-primary text-center">
+            <p class="display-5 mb-3">MyBlog</p>
+            <small class="text-white-50">&copy; Copyright by Me. All rights reserved.</small>
+        </div>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
