--- a/templates/post/comment_create.html
+++ b/templates/post/comment_create.html
@@ -13,6 +13,7 @@ Create a new comment
                 {% csrf_token %}
                 {{form.as_p}}
                 <button type="submit" class="btn btn-primary">Create!</button>
+                <button type="reset" class="btn btn-danger">Reset</button>
             </form>
         </div>
     </div>
