--- a/templates/post/edit.html
+++ b/templates/post/edit.html
@@ -21,6 +21,7 @@ edit {{post}}
                 {% endif %}
                 {% endfor %}
                 <button type="submit" class="btn btn-primary">Edit</button>
+                <button type="reset" class="btn btn-danger">Reset</button>
             </form>
         </div>
     </div>
