--- a/templates/post/share.html
+++ b/templates/post/share.html
@@ -1,13 +1,13 @@
 {% extends 'post/base.html' %}
 {% block title %}
-Registraion
+Post share
 {% endblock %}
 
 {% block content %}
 <div class="container mt-5">
     <form method="post">
         {% csrf_token %}
-        <h2>Registration</h2>
+        <h2>Share post</h2>
         {% for field in form %}
         <div class="row">
             <div class="col-md-6 col-lg-4 gy-2">
@@ -21,7 +21,7 @@ Registraion
             </div>
         </div>
         {% endfor %}
-        <button type="submit" class="btn btn-primary my-3">Register</button>
+        <button type="submit" class="btn btn-primary my-3">Send</button>
         <button type="reset" class="btn btn-danger">Reset</button>
     </form>
 </div>
