--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,25 +4,36 @@ Login
 {% endblock %}
 
 {% block content %}
-{% if form.non_field_errors %}
-{% for error in form.non_field_errors %}
-    <div class="container mt-3">
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            <div class="d-flex align-items-center">
-                {{ error }}
-            </div>
-            <button type="button" class="btn-close" style="height:20px" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    </div>
+{% if messages %}
+{% for message in messages %}
+{% include 'post/messages.html' with message=message %}
 {% endfor %}
 {% endif %}
-<form method="post">
-    {% csrf_token %}
-    <div class="container mt-5">
-        <h2>Login</h2>
+{% if form.non_field_errors %}
+{% for error in form.non_field_errors %}
+<div class="container mt-3">
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        <div class="d-flex align-items-center">
+            {{ error }}
+        </div>
+        <button type="button" class="btn-close" style="height:20px" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+</div>
+{% endfor %}
+{% endif %}
+<div class="container mt-5">
+    <h2>Login</h2>
+
+    <a href="{% url 'social:begin' 'github' %}"><i class="bi bi-github text-black" style="font-size:36px"></i></a>
+
+    <a href="{% url 'social:begin' 'google-oauth2' %}" class="ms-3"> <i class="bi bi-google "
+                                                                        style="font-size:36px"></i></a>
+
+    <form method="post">
+        {% csrf_token %}
         {% for field in form %}
         <div class="row">
-            <div class="col-md-3 gy-2">
+            <div class="col-md-6 col-lg-4 gy-2">
                 {{field.label_tag}}
                 {{field}}
                 {% if field.errors %}
@@ -34,6 +45,9 @@ Login
         </div>
         {% endfor %}
         <button type="submit" class="btn btn-primary my-3">Login</button>
-    </div>
-</form>
+        <button type="reset" class="btn btn-danger">Reset</button>
+    </form>
+    <p>Forgot your password? Click <a href="{% url 'password_reset' %}">here</a>.</p>
+</div>
+
 {% endblock %}
