Connected Celery, Redis, made email sends async. Covered views and models with tests

--- a/templates/post/base.html
+++ b/templates/post/base.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/post/create">Create a post</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'create' %}">Create a post</a>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="/?user_posts=true">Check your posts</a>
                         </li>
