--- a/templates/post/comment_create.html
+++ b/templates/post/comment_create.html
@@ -11,9 +11,17 @@ Create a new comment
         <div class="col-sm-8 col-md-5">
             <form method="post">
                 {% csrf_token %}
-                {{form.as_p}}
-                <button type="submit" class="btn btn-primary">Create!</button>
-                <button type="reset" class="btn btn-danger">Reset</button>
+                {% for field in form %}
+                {{field.label_tag}}
+                {{field}}
+                {% if field.errors %}
+                <div class="invalid-feedback d-block">
+                    {{ field.errors|striptags }}
+                </div>
+                {% endif %}
+                {% endfor %}
+                <button type="submit" class="btn btn-primary mt-2">Create!</button>
+                <button type="reset" class="btn btn-danger mt-2">Reset</button>
             </form>
         </div>
     </div>
