--- a/templates/post/create.html
+++ b/templates/post/create.html
@@ -21,7 +21,7 @@ Create a new post
                 {% endif %}
                 {% endfor %}
                 <button type="submit" class="btn btn-primary mt-2">Create!</button>
-                <button type="reset" class="btn btn-danger">Reset</button>
+                <button type="reset" class="btn btn-danger mt-2">Reset</button>
             </form>
         </div>
     </div>
