--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -24,10 +24,10 @@ Login
 <div class="container mt-5">
     <h2>Login</h2>
 
-    <a href="{% url 'social:begin' 'github' %}"><i class="bi bi-github text-black" style="font-size:36px"></i></a>
+    <a href="{% url 'oauth:begin' 'github' %}"><i class="bi bi-github text-black" style="font-size:36px"></i></a>
 
-    <a href="{% url 'social:begin' 'google-oauth2' %}" class="ms-3"> <i class="bi bi-google "
-                                                                        style="font-size:36px"></i></a>
+    <a href="{% url 'oauth:begin' 'google-oauth2' %}" class="ms-3"> <i class="bi bi-google "
+                                                                       style="font-size:36px"></i></a>
 
     <form method="post">
         {% csrf_token %}
